# rayshot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: .SRCINFO  PKGBUILD
packaging/rayshot/: .SRCINFO  PKGBUILD  rayshot.install
packaging/rayshot-git/: PKGBUILD
src/: anim.rs  capture.rs  export.rs  hotkey.rs  main.rs  overlay.rs  scene.rs  screencast.rs
