[package]
name = "rayshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ashpd = { version = "0.13.11", features = ["screenshot", "tokio"] }
egui = "0.34.3"
egui-phosphor = "0.12.0"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
image = "0.25.10"
libc = "0.2.186"
signal-hook = "0.4.4"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"
wgpu = "29"
winit = "0.30"
